--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <link rel="shortcut icon" type="image/x-icon" href="link.png" /> -->
   </head>
   <body>
+    <textarea name="" id="myTextarea" cols="30" rows="10"></textarea>
       <script>
           window.addEventListener('load', (event) => {
             console.log('The page has fully loaded');
@@ -21,7 +22,7 @@
                     
                     var jsonPerson = '{"first_name":"billy", "age":23}';
                     var personObject = JSON.parse(jsonPerson);
-                    return personObject 
+                    textbox.val(personObject);
                 }
             }
           });
