--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     // return params.get('test');
                     
                     var jsonPerson = '{"first_name":"billy", "age":23}';
-                    var personObject = JSON.parse(jsonPerson);
+                    var personObject = JSON.stringify(jsonPerson);
                     textbox.val(personObject);
                 }
             }
