--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     var jsonPerson = '{"first_name":"billy", "age":23}';
                     $.ajax({
   type: "POST",
-  url: "https://vishwaspuriofficial.github.io/Web-Services/.json",
+  url: "https://vishwaspuriofficial.github.io/Web-Services/info.json",
   data: JSON.stringify({ "userName": "abc", "password" : "abc" }),
   contentType: "application/json",
   success: function (result) {
