--- a/index.html
+++ b/index.html
@@ -11,32 +11,7 @@
   </head>
   <body>
     <div id="myTextarea"></div>
-      <script>
-          window.addEventListener('load', (event) => {
-            console.log('The page has fully loaded');
-            const params = new URLSearchParams(window.location.search)
-            if (params.has('test')) {
-                if (params.get('test')) {
-                    // document.title = params.get('test');
-                    // return params.get('test');
-                    
-                    var jsonPerson = '{"first_name":"billy", "age":23}';
-                    $.ajax({
-  type: "POST",
-  url: "https://vishwaspuriofficial.github.io/Web-Services/info.json",
-  data: JSON.stringify({ "userName": "abc", "password" : "abc" }),
-  contentType: "application/json",
-  success: function (result) {
-    console.log(result);
-  },
-  error: function (result, status) {
-    console.log(result);
-  }
-});
-            }
-          }
-          });
-      </script>
+      <script src="script.js"></script>
 
   </body>
 </html>
