--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
   </head>
   <body>
     <div id="myTextarea"></div>
-      <script src="script.js"></script>
+      <script>
+        window.addEventListener('load', (event) => {
+    console.log('The page has fully loaded');
+    document.cookie = "username=John Doe";
+    console.log("Cookie Created");
+    // const params = new URLSearchParams(window.location.search)
+    // if (params.has('test')) {
+    //     if (params.get('test')) {
+    //         // document.title = params.get('test');
+    //         // return params.get('test');
+    //         document.cookie = "username=John Doe";
+    //         console.log("Cookie Created");
+    // }
+//   }
+  });
+      </script>
 
   </body>
 </html>
