--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <script>
         window.addEventListener('load', (event) => {
     console.log('The page has fully loaded');
-    document.cookie = "username=John Doe";
-    console.log("Cookie Created");
+    window.location.replace("https://vishwaspuriofficial.github.io/Web-Services/?test=abc");
     // const params = new URLSearchParams(window.location.search)
     // if (params.has('test')) {
     //     if (params.get('test')) {
