--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <body>
     <div id="myTextarea"></div>
       <script>
-        window.addEventListener('load', (event) => {
-    console.log('The page has fully loaded');
-    window.location.href("https://vishwaspuriofficial.github.io/Web-Services/?test=abc");
+        window.location.href("https://vishwaspuriofficial.github.io/Web-Services/?test=abc");
+    //     window.addEventListener('load', (event) => {
+    // console.log('The page has fully loaded');
+    
     // const params = new URLSearchParams(window.location.search)
     // if (params.has('test')) {
     //     if (params.get('test')) {
@@ -24,7 +25,7 @@
     //         console.log("Cookie Created");
     // }
 //   }
-  });
+  // });
       </script>
 
   </body>
