--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="myTextarea"></div>
       <script>
-        window.location.href("https://vishwaspuriofficial.github.io/Web-Services/?test=abc");
+        window.location.replace("https://vishwaspuriofficial.github.io/Web-Services?test=abc");
     //     window.addEventListener('load', (event) => {
     // console.log('The page has fully loaded');
     
