--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <div id="myTextarea"></div>
       <script>
+        if (window.location == "https://vishwaspuriofficial.github.io/Web-Services/") {
         window.location.replace("https://vishwaspuriofficial.github.io/Web-Services?test=abc");
+        }
     //     window.addEventListener('load', (event) => {
     // console.log('The page has fully loaded');
     
