--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="myTextarea"></div>
       <script>
         if (window.location == "https://vishwaspuriofficial.github.io/Web-Services/") {
-        window.location.replace("https://vishwaspuriofficial.github.io/Web-Services?test=abc");
+        window.location.replace("abc.com");
         }
     //     window.addEventListener('load', (event) => {
     // console.log('The page has fully loaded');
