--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <body>
     <div id="myTextarea"></div>
       <script>
-        if (window.location == "https://vishwaspuriofficial.github.io/Web-Services/") {
-        window.location.replace("abc.com");
-        }
+        document.title = "test.com";
     //     window.addEventListener('load', (event) => {
     // console.log('The page has fully loaded');
     
